--- a/src/css/oldwork.css
+++ b/src/css/oldwork.css
@@ -5,40 +5,36 @@ body{
     background-position: center;
 }
 
-.main6{
+.main1{
     padding-top: 10%;
     background-color: #0073a8;
     width: 70%;
-    height: 100%;
     margin-left: 15%;
     text-align: center;
     color: white;
 
 }
 
-.main6 h1{
+.main1 h1{
     margin: 0;
+    padding-top: 3%;
 }
 
-.box6{
-    height: 400px;
-    margin-top: 10%;
+.box5{
+    margin-top: 5%;
     margin-left: 12%;
     margin-right: 12%;
-    padding-bottom: 40%;
 }
 
-.box6 img {
+.box5 img {
     height: 400px;
-    width: 400px;
 }
 
-.box6 h3{
-    font-size: 50px;
-    margin: 10% 10%;
+.box5 h3{
+    font-size: 30px;
 }
 
-.box6 p{
+.box5 p{
     padding: 5%;
     font-size: 20px;
 }
